@@ -8,10 +8,19 @@
 #include <setjmp.h>
 #include <stdio.h>
 
-#if !defined _MSC_VER
-#include <stdbool.h>
-#elif !defined __cplusplus
+#ifndef __cplusplus
+# ifndef _MSC_VER
+#  include <stdbool.h>
+#  define  TRUE  true
+#  define  FALSE false
+# else
 typedef unsigned char bool;
+#  define  TRUE   1
+#  define  FALSE  0
+# endif
+#else
+#  define  TRUE   true
+#  define  FALSE  false
 #endif
 
 #include "SDCCset.h"
@@ -112,8 +121,6 @@ typedef unsigned char bool;
 
 #define  SMALL_MODEL 0
 #define  LARGE_MODEL 1
-#define  TRUE 1
-#define  FALSE 0
 
 #define MAX_TVAR 6
 #define INITIAL_INLINEASM 4*1024
